--- a/curso-materialui/public/index.html
+++ b/curso-materialui/public/index.html
@@ -23,7 +23,7 @@
     />
     <title>Cadastros</title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0;">
     <noscript>Você precisa habilitar o JavaScript em seu navegador</noscript>
     <div id="root"></div>
   </body>
